[gd_scene load_steps=2 format=3 uid="uid://hgfmexukpy44"]

[ext_resource type="Script" path="res://scripts/player_camera.gd" id="1_3vkd8"]

[node name="Camera2D" type="Camera2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
offset = Vector2(-0.54, 2.08165e-12)
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("1_3vkd8")

[node name="CameraLimits" type="Node" parent="."]

[node name="TopLeft" type="Marker2D" parent="CameraLimits"]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="BottomRight" type="Marker2D" parent="CameraLimits"]
position = Vector2(640, 360)
